--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,6 @@
 name: AntiSpaces
-api: 5.0.0
+main: skyss0fly\AntiSpaces\Main
 version: 1.1
-description: remove those pesky spaces
+api: 5.0.0
 author: skyss0fly
+description: remove those pesky spaces
